
$Id$

==============================================================================
Version 1.x - Released TBD
==============================================================================

1. 2018-02-09: Migrated EBLA SourceForge Repository from CVS to git.

2. 2021-12-21: Updated to Log4j 2.17.0; Updated to SwingSet 4.0.7.

3. ...


==============================================================================
Version 1.0 - Released 2014-12-26
==============================================================================

1. Misc. code cleanup

2. Added ./jedison/ folder with script to build separate jEDISON JAR

3. Renamed ./scripts/linbuildjar to ./scripts/linbuildeblajar

4. Made com.greatmindsworking.EDISON.segm.GFunction an abstract class

5. Updates to EBLA & jEDISON readme.txt files

6. Updates to latest H2 jar (h2-1.4.184)

7. readme.txt cleanup

8. improved UI functionality surrounding database connections

==============================================================================
Version 0.9 - Released 06-21-2014
==============================================================================

1. Moved various compilation scripts to /EBLA/scripts

2. Compiling for latest JRE (jdk1.7.0_45)

3. Updates to latest H2 jar (h2-1.4.177)

4. Retooling release jar as a single file with (bin, docs, & src),
   with all extracting to a ./ebla directory


==============================================================================
Version 0.8 - Released 06-10-2011
==============================================================================

1. Added support for Generics throughout

2. Compiling for Java 1.6

3. Addressed all -Xlint warnings (some via @SuppressWarnings)

4. Adding screen default values for new records (TO DO)

5. Switched database from PostgreSQL to H2 embedded database

6. Added Eclipse .project & .classpath files to CVS


==============================================================================